Added responsive layout

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         </form>
         <div class="todo__container">
             <h2>My To-Dos</h2>
-            <div class="cards__container">
-                
-            </div>
+            <div class="cards__container"></div>
         </div>
     </main>
 </body>
